...
            "state" : "translated",
            "value" : "Fuma actualmente"
          }
        }
      }
    },
    "Add Data" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Data"
          }
...
    },
    "Blood Lipids" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "LDL Cholesterol"
          }
        },
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "LDL Cholesterol"
...
            "state" : "translated",
            "value" : "Grupo Sanguíneo"
          }
        }
      }
    },
    "Body Mass Index" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Body Mass Index"
          }
...
            "state" : "translated",
            "value" : "Enfermedad renal crónica"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar"
          }
...
            "state" : "translated",
            "value" : "días"
          }
        }
      }
    },
    "Debug" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Debug"
          }
...
            "state" : "translated",
            "value" : "Ingrese %@"
          }
        }
      }
    },
    "Enter Blood Pressure" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter Blood Pressure"
          }
...
            "state" : "translated",
            "value" : "Ingresar Presión Arterial"
          }
        }
      }
    },
    "Enter BMI" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Enter BMI"
          }
...
            "state" : "translated",
            "value" : "Número NHS"
          }
        }
      }
    },
    "Nicotine Exposure" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nicotine Exposure"
          }
...
            "state" : "translated",
            "value" : "Aniversario de zafiro"
          }
        }
      }
    },
    "Save" : {
      "localizations" : {
        "en-GB" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save"
          }
...
            "state" : "translated",
            "value" : "Aniversario de plata"
          }
        }
      }
    },
    "Sleep" : {
      "localizations" : {
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Sueño"
          }
...
