...
    private enum InputMode: Hashable, CaseIterable {
        case bmiDirect
        case weightAndHeight
        
        var displayTitle: String {
            switch self {
            case .bmiDirect: "BMI"
            case .weightAndHeight: "Weight and Height"
            }
        }
    }
    
    @Environment(HealthKit.self)
...
